moved blocks around creative menus,more additions to handbook entrys

--- a/bin/Immersion/assets/immersion/lang/en.json
+++ b/bin/Immersion/assets/immersion/lang/en.json
@@ -117,7 +117,8 @@
   "blockdesc-tropicalfruits-coconut": "Place on a solid surface and use (RMB) to cut into slices.",
   "block-tropicalfruits-coconutslice-*": "Coconut slice",
   "blockdesc-tropicalfruits-coconutslice": "Cannot be used in cooking, but can be eaten raw.",
-  "block-tropicalfruits-coconutbroken-*": "Coconut broken",
+  "block-tropicalfruits-coconutbroken-*": "Broken Coconut",
+  "blockdesc-tropicalfruits-coconutbroken-*": "Collectable Coconut Slices.",
 
   "item-animal-small-bones": "Pile of Small Bones",
   "itemdesc-animal-small-bones": "Not Yet Implemented. Future use: fertilizers.",
@@ -381,9 +382,9 @@
   "block-sisalrug-small-ground-*": "Small Sisal Rug",
   "block-sisalrug-medium-ground-*": "Medium Sisal Rug",
   "block-sisalrug-large-ground-*": "Large Sisal Rug",
-  "blockdesc-sisalrug-small-ground-*": "When placed in a sunny location, dries 16 berries and produces 8 Dryfruit. Use as a label when creating chests.",
-  "blockdesc-sisalrug-medium-ground-*": "When placed in a sunny location, dries up to 32 berries and produces 16 Dryfruit.",
-  "blockdesc-sisalrug-large-ground-*": "When placed in a sunny location, dries up to 64 berries and produces 32 Dryfruit. Used to craft the Burden basket.",
+  "blockdesc-sisalrug-small-ground-*": "When placed in a sunny location, dries 16 berries and produces 8 Dried fruit. Use as a label when creating chests.",
+  "blockdesc-sisalrug-medium-ground-*": "When placed in a sunny location, dries up to 32 berries and produces 16 Dried fruit.",
+  "blockdesc-sisalrug-large-ground-*": "When placed in a sunny location, dries up to 64 berries and produces 32 Dried fruit. Used to craft the Burden basket.",
 
   "block-dryingmat-fresh-small-blackcurrant-*": "Small Drying Mat with Fresh Black Currant",
   "block-dryingmat-dry-small-blackcurrant-*": "Small Drying Mat with Dry Black Currant",
@@ -1026,7 +1027,7 @@
   "block-dead-chicken-hen-savanna": "Dead Savanna Hen",
   "block-dead-chicken-hen-woodland": "Dead Woodland Hen",
 
-  "block-dead-hare-male-artic": "Dead Artic Male Hare",
+  "block-dead-hare-male-arctic": "Dead Artic Male Hare",
   "block-dead-hare-male-ashgrey": "Dead Ash Grey Male Hare",
   "block-dead-hare-male-darkbrown": "Dead Dark Brown Male Hare",
   "block-dead-hare-male-desert": "Dead Desert Male Hare",
@@ -1036,7 +1037,7 @@
   "block-dead-hare-male-silver": "Dead Silver Male Hare",
   "block-dead-hare-male-smokegrey": "Dead Smoke Grey Male Hare",
 
-  "block-dead-hare-female-artic": "Dead Artic Female Hare",
+  "block-dead-hare-female-arctic": "Dead Artic Female Hare",
   "block-dead-hare-female-ashgrey": "Dead Ash Grey Female Hare",
   "block-dead-hare-female-darkbrown": "Dead Dark Brown Female Hare",
   "block-dead-hare-female-desert": "Dead Desert Female Hare",
@@ -1053,6 +1054,9 @@
   "block-dead-wild-sheep-ewe": "Dead Wild Ewe",
   "block-dead-wild-sheep-ram": "Dead Wild Ram",
 
+  "block-dead-raccoon-male": "Dead Male Raccoon",
+  "block-dead-raccoon-female": "Dead Female Raccoon",
+  
   "block-dead-armadillo-male": "Dead Male Armadillo",
   "block-dead-armadillo-female": "Dead Female Armadillo",
 
@@ -1107,6 +1111,7 @@
   "blockdesc-dead-chicken-*": "Butcher with any knife to harvest feathers, poultry meat, and possibly some fat.",
   "blockdesc-dead-hare-*": "Butcher using any knife to harvest hare meat and sometimes a pelt or hide.",
   "blockdesc-dead-armadillo-*": "Butcher using any knife to harvest red meat.",
+  "blockdesc-dead-raccoon-*": "Butcher using any knife to harvest carnivore meat, small bones and raw hide.",
   "blockdesc-dead-fox-*": "Butcher using any knife to harvest carnivore meat, and sometimes a pelt or hide.",
   "blockdesc-dead-sheep-*": "Skin the animal using any knife to harvest raw hides. Butcher to harvest mutton, tendons, fat, bones and intestines. Rams may also provide horns. Use an axe, saw, or sword before skinning to try to collect a Head Trophy. Headless animals sometimes provide pelts instead of hides.",
   "blockdesc-dead-pig-*": "Skin the animal using any knife to harvest raw hides. Butcher to harvest pork chops, tendons, fat, bones and intestines. Use an axe, saw, or sword before skinning to try to collect a Head Trophy. Headless animals sometimes provide pelts instead of hides.",
@@ -1268,41 +1273,42 @@
   "block-hyenarug-*": "Hyena Rug",
   "blockdesc-hyenarug-*": "Rugs can be placed on floors or walls. Place the rug on the ground and use a knife (Sneak + HOLD RMB) to convert to 3 medium raw hides.",
 
+  "block-crackedbrick-andesite": "Cracked Andesite Bricks",
+  "block-crackedbrick-basalt": "Cracked Basalt Bricks",
+  "block-crackedbrick-bauxite": "Cracked Bauxite Bricks",
   "block-crackedbrick-chert": "Cracked Chert Bricks",
+  "block-crackedbrick-chalk": "Cracked Chalk Bricks",
+  "block-crackedbrick-claystone": "Cracked Claystone Bricks",
   "block-crackedbrick-conglomerate": "Cracked Conglomerate Bricks",
+  "block-crackedbrick-granite": "Cracked Granite Bricks",
   "block-crackedbrick-limestone": "Cracked Limestone Bricks",
   "block-crackedbrick-peridotite": "Cracked Peridotite Bricks",
   "block-crackedbrick-phyllite": "Cracked Phyllite Bricks",
-  "block-crackedbrick-slate": "Cracked Slate Bricks",
-  "block-crackedbrick-andesite": "Cracked Andesite Bricks",
-  "block-crackedbrick-basalt": "Cracked Basalt Bricks",
-  "block-crackedbrick-chalk": "Cracked Chalk Bricks",
-  "block-crackedbrick-claystone": "Cracked Claystone Bricks",
-  "block-crackedbrick-granite": "Cracked Granite Bricks",
   "block-crackedbrick-sandstone": "Cracked Sandstone Bricks",
   "block-crackedbrick-shale": "Cracked Shale Bricks",
+  "block-crackedbrick-slate": "Cracked Slate Bricks",
   "blockdesc-crackedbrick-*": "Immersion addition. Crafted from a brick block and a hammer.",
   
   "block-crackedrock-andesite": "Cracked Andesite Rock",
   "block-crackedrock-basalt": "Cracked Basalt Rock",
+  "block-crackedrock-bauxite": "Cracked Bauxite Rock",
   "block-crackedrock-chalk": "Cracked Chalk Rock",
-  "block-crackedrock-claystone": "Cracked Claystone Rock",
-  "block-crackedrock-granite": "Cracked Granite Rock",
-  "block-crackedrock-obsidian": "Cracked Obsidian Rock",
-  "block-crackedrock-sandstone": "Cracked Sandstone Rock",
-  "block-crackedrock-shale": "Cracked Shale Rock",
   "block-crackedrock-chert": "Cracked Chert Rock",
+  "block-crackedrock-claystone": "Cracked Claystone Rock",
   "block-crackedrock-conglomerate": "Cracked Conglomerate Rock",
+  "block-crackedrock-granite": "Cracked Granite Rock",
+  "block-crackedrock-halite": "Cracked Halite Rock",
+  "block-crackedrock-kimberlite": "Cracked Kimberlite Rock",
   "block-crackedrock-limestone": "Cracked Limestone Rock",
+  "block-crackedrock-obsidian": "Cracked Obsidian Rock",
   "block-crackedrock-peridotite": "Cracked Peridotite Rock",
   "block-crackedrock-phyllite": "Cracked Phyllite Rock",
-  "block-crackedrock-slate": "Cracked Slate Rock",
-  "block-crackedrock-kimberlite": "Cracked Kimberlite Rock",
+  "block-crackedrock-sandstone": "Cracked Sandstone Rock",
   "block-crackedrock-scoria": "Cracked Scoria Rock",
-  "block-crackedrock-tuff": "Cracked Tuff Rock",
-  "block-crackedrock-bauxite": "Cracked Bauxite Rock",
-  "block-crackedrock-halite": "Cracked Halite Rock",
+  "block-crackedrock-shale": "Cracked Shale Rock",
+  "block-crackedrock-slate": "Cracked Slate Rock",
   "block-crackedrock-suevite": "Cracked Suevite Rock",
+  "block-crackedrock-tuff": "Cracked Tuff Rock",
   "block-crackedrock-whitemarble": "Cracked White Marble Rock",
   "block-crackedrock-redmarble": "Cracked Pink Marble Rock",
   "block-crackedrock-greenmarble": "Cracked Green Marble Rock",
@@ -1310,21 +1316,22 @@
   
   "block-crackedrockpolished-andesite": "Cracked Andesite Rock (Polished)",
   "block-crackedrockpolished-basalt": "Cracked Basalt Rock (Polished)",
+  "block-crackedrockpolished-bauxite": "Cracked Bauxite Rock (Polished)",
   "block-crackedrockpolished-chalk": "Cracked Chalk Rock (Polished)",
+  "block-crackedrockpolished-chert": "Cracked Chert Rock (Polished)",
   "block-crackedrockpolished-claystone": "Cracked Claystone Rock (Polished)",
+  "block-crackedrockpolished-conglomerate": "Cracked Conglomerate Rock (Polished)",
   "block-crackedrockpolished-granite": "Cracked Granite Rock (Polished)",
+  "block-crackedrockpolished-limestone": "Cracked Limestone Rock (Polished)",
   "block-crackedrockpolished-obsidian": "Cracked Obsidian Rock (Polished)",
+  "block-crackedrockpolished-peridotite": "Cracked Peridotite Rock (Polished)",
+  "block-crackedrockpolished-phyllite": "Cracked Phyllite Rock (Polished)",
   "block-crackedrockpolished-sandstone": "Cracked Sandstone Rock (Polished)",
   "block-crackedrockpolished-shale": "Cracked Shale Rock (Polished)",
+  "block-crackedrockpolished-slate": "Cracked Slate Rock (Polished)",
   "block-crackedrockpolished-whitemarble": "Cracked White Marble Rock (Polished)",
   "block-crackedrockpolished-greenmarble": "Cracked Green Marble Rock (Polished)",
   "block-crackedrockpolished-redmarble": "Cracked Pink Marble Rock (Polished)",
-  "block-crackedrockpolished-chert": "Cracked Chert Rock (Polished)",
-  "block-crackedrockpolished-conglomerate": "Cracked Conglomerate Rock (Polished)",
-  "block-crackedrockpolished-limestone": "Cracked Limestone Rock (Polished)",
-  "block-crackedrockpolished-peridotite": "Cracked Peridotite Rock (Polished)",
-  "block-crackedrockpolished-phyllite": "Cracked Phyllite Rock (Polished)",
-  "block-crackedrockpolished-slate": "Cracked Slate Rock (Polished)",
   "blockdesc-crackedrockpolished-*": "Immersion addition. Crafted from a polished stone block and a hammer.",
   
   "item-settinghammerhead-bismuthbronze": "Bismuth Bronze Setting Hammer Head",
@@ -1340,7 +1347,7 @@
   "item-settinghammer-tinbronze": "Tin Bronze Setting Hammer",
   "itemdesc-settinghammer-*": "Use on stepping stones to convert to paved road blocks",
 
-  "item-tamperhead-wood": "Wood Tamper Head (Wood)",
+  "item-tamperhead-wood": "Wood Tamper Head",
   "item-tamperhead-bismuthbronze": "Bismuth Bronze Tamper Head",
   "item-tamperhead-blackbronze": "Black Bronze Tamper Head",
   "item-tamperhead-copper": "Copper Tamper Head",
@@ -1662,7 +1669,7 @@
   "blockdesc-rammedearth-*": "Not Yet Implemented",
   
   "item-stonebrick-*": "Immersion Stone Brick",
-  "itemdesc-stonebrick": "Not Yet Implemented",
+  "itemdesc-stonebrick-*": "Not Yet Implemented",
   
   "item-woodenmallet": "Wooden Mallet",
   "itemddesc-woodenmallet": "Not Yet Implemented.",
