--- a/bin/Immersion/assets/immersion/lang/en.json
+++ b/bin/Immersion/assets/immersion/lang/en.json
@@ -111,14 +111,14 @@
   "blockdesc-palmfruits-*": "Harvest using RMB",
   "block-tropicalfruits-bananna-*": "Banana",
   "blockdesc-tropicalfruits-bananna": "Cannot be used in cooking, but can be eaten raw.",
-  "block-tropicalfruits-coconutshell-*": "Coconut husk",
-  "blockdesc-tropicalfruits-coconutshell": "Place on a solid surface and use (RMB) to remove the husk.",
-  "block-tropicalfruits-coconut-*": "Coconut",
-  "blockdesc-tropicalfruits-coconut": "Place on a solid surface and use (RMB) to cut into slices.",
-  "block-tropicalfruits-coconutslice-*": "Coconut slice",
-  "blockdesc-tropicalfruits-coconutslice": "Cannot be used in cooking, but can be eaten raw.",
+  "block-tropicalfruits-coconutshell-*": "Coconut",
+  "blockdesc-tropicalfruits-coconutshell-*": "Place on a solid surface and use a knife (Sneak + RMB) to remove the husk.",
+  "block-tropicalfruits-coconut-*": "Shelled Coconut",
+  "blockdesc-tropicalfruits-coconut-*": "Place on a solid surface and use and axe (Sneak + RMB) to cut into slices.",
   "block-tropicalfruits-coconutbroken-*": "Broken Coconut",
-  "blockdesc-tropicalfruits-coconutbroken-*": "Collectable Coconut Slices.",
+  "blockdesc-tropicalfruits-coconutbroken-*": "A pile of Coconut Slices, use a knife to collect.",
+  "block-tropicalfruits-coconutslice-*": "Coconut slice",
+  "blockdesc-tropicalfruits-coconutslice-*": "Cannot be used in cooking, but can be eaten raw.",
 
   "item-animal-small-bones": "Pile of Small Bones",
   "itemdesc-animal-small-bones": "Not Yet Implemented. Future use: fertilizers.",
