creative language changes

--- a/bin/Immersion/assets/game/lang/en.json
+++ b/bin/Immersion/assets/game/lang/en.json
@@ -1192,7 +1192,7 @@
 	"item-spearhead-steel": "Steel Spearhead",
 
 	"item-bow-simple": "Simple Bow",
-	"itemdesc-bow-simple": "A little better than a flimsy stick. Craft the limb using a knife and stick. Combine with bowstring to create a carved bow.",
+	"itemdesc-bow-simple": "A few flimsy sticks combined with twine.",
 
 	"item-bow-carved": "Carved Bow",
 	"itemdesc-bow-carved": "A little better than a flimsy stick.  Made by combining a carved limb with a bowstring. Replace bowstring before it breaks and destroys the bow.",
