added updates to the language files

--- a/bin/Immersion/assets/game/lang/en.json
+++ b/bin/Immersion/assets/game/lang/en.json
@@ -23,7 +23,7 @@
 	"craftinginfo-immersivecrafting-text": "<strong>In World Crafting</strong><br><br>Crafting items, blocks and containers (objects) using this mechanic requires players to assemble the object through the step-wise addition of components on a workspace block. Wherever possible, crafting performed within the player's grid has been changed to the immersive mechanic, and the Vanilla grid recipes do not function. General Crafting Directions:  Placing the first component on a solid block creates a workspace (RMB). Workspaces can be created on any block where a player could knap stones or form clay in vanilla. All subsequent components are added using (Sneak + RMB). Each successful component addition is accompanied by a visual change in the object. When a crafting recipe specifies 'add 4 components', one addition step adds all 4 items from the player's inventory. The player does not need to add each component individually (Sneak + RMB X 4). When the object is complete, breaking the object completes the crafting process. No additional components can be added once the block is broken. Replacing the block or container activates the object for use. Substituting a component that is not specified in the recipe (debarked branch for a barked branch) will result in the creation of a different item than the player intends to build. Changing the order of component addition will also change the item creation. When building an item, if attempting to add a component that is not permitted in the recipe, nothing will happen when using (Sneak + RMB). Check the crafting directions again and make sure the chosen component is allowable. Good Luck and happy crafting!",
 
 	"blockdesc-metalsheet-*": "Use to assemble Glass Lanterns",
-	"block-locust-cage": "Locust (Cage)",
+	"block-locust-cage": "Locust Cage",
 	"block-angledgears-s": "Angled Gears",
 	"item-sail": "Sail",
 	"item-ingot-rawironbloom": "Ingot (Raw Iron Bloom)",
@@ -154,7 +154,7 @@
 	"block-choppingblock-acacia-*": "Acacia Chopping Block",
 	"block-choppingblock-kapok-*": "Kapok Chopping Block",
 	"block-choppingblock-aged-*": "Aged Chopping Block",
-	"blockdesc-choppingblock-*": "Place a log or branch of any wood type (RMB). Convert the log or branch to firewood using an axe (Sneak + RMB).",
+	"blockdesc-choppingblock-*": "Place a log or branch of any wood type (RMB). Convert the log or branch to firewood using an axe (RMB).",
     "block-handbooktitle-choppingblock-*": "Used for",
 	"block-handbooktext-choppingblock-*": "Obtaining firewood from logs and branches. Firewood yield is 8 (log) and 6 (thick), 4 (medium) or 2 (thin).",
 	
@@ -659,11 +659,11 @@
 	"block-toolmold-fire-burned-lamellae": "Fire Lamellae Mold (Fired)",
 
 	"block-toolmold-red-raw-axe": "Red Axe Head Mold (Raw)",
-	"block-toolmold-red-burned-axe": "Red Axe Head Mold(Fired)",
+	"block-toolmold-red-burned-axe": "Red Axe Head Mold (Fired)",
 	"block-toolmold-red-raw-pickaxe": "Red Pickaxe Head Mold (Raw)",
 	"block-toolmold-red-burned-pickaxe": "Red Pickaxe Head Mold (Fired)",
 	"block-toolmold-red-raw-prospectingpick": "Red Prospecting Pick Head Mold (Raw)",
-	"block-toolmold-red-burned-prospectingpick": "Red Prospecting Pick Head Mold(Fired)",
+	"block-toolmold-red-burned-prospectingpick": "Red Prospecting Pick Head Mold (Fired)",
 	"block-toolmold-red-raw-shovel": "Red Shovel Head Mold (Raw)",
 	"block-toolmold-red-burned-shovel": "Red Shovel Head Mold (Fired)",
 	"block-toolmold-red-raw-sword": "Red Sword Blade Mold (Raw)",
@@ -750,9 +750,9 @@
 	"block-food-bowl-small-red-burned": "Small Red Mixing Bowl (Fired)",
 	"block-food-bowl-medium-red-burned": "Medium Red Mixing Bowl (Fired)",
 	"block-food-bowl-large-red-burned": "Large Red Mixing Bowl (Fired)",
-	"blockdesc-food-bowl-small-*-burned": "Holds 4 portions.",
-	"blockdesc-food-bowl-medium-*-burned": "Holds 8 portions.",
-	"blockdesc-food-bowl-large-*-burned": "Holds 16 portions.",
+	"blockdesc-food-bowl-small-*-burned": "Holds 4 portions",
+	"blockdesc-food-bowl-medium-*-burned": "Holds 8 portions",
+	"blockdesc-food-bowl-large-*-burned": "Holds 16 portions",
     "block-handbooktitle-food-bowl-*": "Used",
 	"block-handbooktext-food-bowl-*-burned": "in Immersion cooking to mix food ingredients for pemmican and prepare salted meats for drying.",
 	
@@ -775,7 +775,7 @@
 	"block-metalsheetmold-brown-burned": "Brown Sheet Mold (Fired)",
 	"block-metalsheetmold-fire-burned": "Fire Sheet Mold (Fired)",
 	"block-metalsheetmold-red-burned": "Red Sheet Mold (Fired)",
-	"blockdesc-metalsheetmold-*-burned": "Add smelted metal to cast sheets.",
+	"blockdesc-metalsheetmold-*-burned": "Add smelted metal to cast a sheet.",
 
 	"block-ingotstampmold-blue-raw": "Blue Ingot Stamp Mold (Raw)",
 	"block-ingotstampmold-brown-raw": "Brown Ingot Stamp Mold (Raw)",
@@ -1212,7 +1212,7 @@
 	"itemcraftdesc-sickle-head-*": "Used to make the stone-age scythe",
 	"itemcraftdesc-slaughteringaxe-head-*": "Used to make the stone-age cleaver",
 
-	"item-primitive-arrowhead-bone": "Primitive Bone Arrowhead",
+	"item-primitive-arrowhead-bone": "Bone Primitive Arrowhead",
 	"item-arrow-primitive": "Primitive Arrow",
 
 	"item-axe-hand-granite": "Granite Hand Axe",
@@ -1242,12 +1242,12 @@
 	"itemdesc-knife-hand-*": "Used to harvest plants and butcher animals.",
 	"itemcraftdesc-knife-hand-*": "Handheld tool, used as is. No handle required.",
 
-	"item-adze-andesite-*": "Primitive Andesite Adze",
-	"item-adze-basalt-*": " Primitive Basalt Adze",
-	"item-adze-obsidian-*": "Primitive Obsidian Adze",
-	"item-adze-flint-*": "Primitive Flint Adze",
-	"item-adze-granite-*": "Primitive Granite Adze",
-	"item-adze-peridotite-*": "Primitive Peridotite Adze",
+	"item-adze-andesite-*": "Andesite Primitive Adze",
+	"item-adze-basalt-*": " Basalt Primitive Adze",
+	"item-adze-obsidian-*": "Obsidian Primitive Adze",
+	"item-adze-flint-*": "Flint Primitive Adze",
+	"item-adze-granite-*": "Granite Primitive Adze",
+	"item-adze-peridotite-*": "Peridotite Primitive Adze",
 	"itemdesc-adze-*-acacia-rope": "with Acacia Shaft and Sisal Binding",
 	"itemdesc-adze-*-birch-rope": "with Birch Shaft and Sisal Binding",
 	"itemdesc-adze-*-kapok-rope": "with Kapok Shaft and Sisal Binding",
@@ -1272,12 +1272,12 @@
 	"item-handbooktitle-adze-*": "Used for",
 	"item-handbooktext-adze-*": "Carving wood blocks before metal tools are available. Voxels can be removed but not replaced. Press (F) to change the tool mode.",
 
-	"item-axe-andesite-*": "Primitive Andesite Axe",
-	"item-axe-basalt-*": " Primitive Basalt Axe",
-	"item-axe-obsidian-*": "Primitive Obsidian Axe",
-	"item-axe-flint-*": "Primitive Flint Axe",
-	"item-axe-peridotite-*": "Primitive Peridotite Axe",
-	"item-axe-granite-*": "Primitive Granite Axe",
+	"item-axe-andesite-*": "Andesite Primitive Axe",
+	"item-axe-basalt-*": " Basalt Primitive Axe",
+	"item-axe-obsidian-*": "Obsidian Primitive Axe",
+	"item-axe-flint-*": "Flint Primitive Axe",
+	"item-axe-peridotite-*": "Peridotite Primitive Axe",
+	"item-axe-granite-*": "Granite Primitive Axe",
 	"itemdesc-axe-*-acacia-rope": "with Acacia Shaft and Sisal Binding",
 	"itemdesc-axe-*-birch-rope": "with Birch Shaft and Sisal Binding",
 	"itemdesc-axe-*-kapok-rope": "with Kapok Shaft and Sisal Binding",
@@ -1302,12 +1302,12 @@
 	"item-handbooktitle-axe-*": "Used for",
 	"item-handbooktext-axe-*": "Creating Immersion additions: Half Log, Chopping Block",
 
-	"item-hammer-andesite-*": "Primitive Andesite Hammer",
-	"item-hammer-basalt-*": " Primitive Basalt Hammer",
-	"item-hammer-obsidian-*": "Primitive Obsidian Hammer",
-	"item-hammer-flint-*": "Primitive Flint Hammer",
-	"item-hammer-peridotite-*": "Primitive Peridotite Hammer",
-	"item-hammer-granite-*": "Primitive Granite Hammer",
+	"item-hammer-andesite-*": "Andesite Primitive Hammer",
+	"item-hammer-basalt-*": " Basalt Primitive Hammer",
+	"item-hammer-obsidian-*": "Obsidian Primitive Hammer",
+	"item-hammer-flint-*": "Flint Primitive Hammer",
+	"item-hammer-peridotite-*": "Peridotite Primitive Hammer",
+	"item-hammer-granite-*": "Granite Primitive Hammer",
 	"itemdesc-hammer-*-acacia-rope": "with Acacia Shaft and Sisal Binding",
 	"itemdesc-hammer-*-birch-rope": "with Birch Shaft and Sisal Binding",
 	"itemdesc-hammer-*-kapok-rope": "with Kapok Shaft and Sisal Binding",
@@ -1332,12 +1332,12 @@
 	"item-handbooktitle-hammer-*": "Used for",
 	"item-handbooktext-hammer-*": "An immersion addition used to rotate and change the shape of log walls and roofs.",
 
-	"item-hoe-andesite-*": "Primitive Andesite Hoe",
-	"item-hoe-basalt-*": " Primitive Basalt Hoe",
-	"item-hoe-obsidian-*": "Primitive Obsidian Hoe",
-	"item-hoe-flint-*": "Primitive Flint Hoe",
-	"item-hoe-peridotite-*": "Primitive Peridotite Hoe",
-	"item-hoe-granite-*": "Primitive Granite Hoe",
+	"item-hoe-andesite-*": "Andesite Primitive Hoe",
+	"item-hoe-basalt-*": " Basalt Primitive Hoe",
+	"item-hoe-obsidian-*": "Obsidian Primitive Hoe",
+	"item-hoe-flint-*": "Flint Primitive Hoe",
+	"item-hoe-peridotite-*": "Peridotite Primitive Hoe",
+	"item-hoe-granite-*": "Granite Primitive Hoe",
 	"itemdesc-hoe-*-acacia-rope": "with Acacia Shaft and Sisal Binding",
 	"itemdesc-hoe-*-birch-rope": "with Birch Shaft and Sisal Binding",
 	"itemdesc-hoe-*-kapok-rope": "with Kapok Shaft and Sisal Binding",
@@ -1370,12 +1370,12 @@
 	"item-handbooktitle-javelin-*": "Used for",
 	"item-handbooktext-javelin-*": "An immersion addition, used as a thrown spear.",
 
-	"item-knife-andesite-*": "Primitive Andesite Knife",
-	"item-knife-basalt-*": " Primitive Basalt Knife",
-	"item-knife-obsidian-*": "Primitive Obsidian Knife",
-	"item-knife-flint-*": "Primitive Flint Knife",
-	"item-knife-peridotite-*": "Primitive Peridotite Knife",
-	"item-knife-granite-*": "Primitive Granite Knife",
+	"item-knife-andesite-*": "Andesite Primitive Knife",
+	"item-knife-basalt-*": " Basalt Primitive Knife",
+	"item-knife-obsidian-*": "Obsidian Primitive Knife",
+	"item-knife-flint-*": "Flint Primitive Knife",
+	"item-knife-peridotite-*": "Peridotite Primitive Knife",
+	"item-knife-granite-*": "Granite Primitive Knife",
 	"itemdesc-knife-*-acacia-rope": "with Acacia Shaft and Sisal Binding",
 	"itemdesc-knife-*-birch-rope": "with Birch Shaft and Sisal Binding",
 	"itemdesc-knife-*-kapok-rope": "with Kapok Shaft and Sisal Binding",
@@ -1398,12 +1398,12 @@
 	"itemdesc-knife-*-pine-leatherstrips": "with Pine Shaft and Leather Strip Binding",
 	"itemdesc-knife-*-bone-leatherstrips": "with Bone Shaft and Leather Strip Binding",
 
-	"item-shovel-peridotite-*": "Primitive Peridotite Shovel",
-	"item-shovel-granite-*": "Primitive Granite Shovel",
-	"item-shovel-andesite-*": "Primitive Andesite Shovel",
-	"item-shovel-basalt-*": "Primitive Basalt Shovel",
-	"item-shovel-obsidian-*": "Primitive Obsidian Shovel",
-	"item-shovel-flint-*": "Primitive Flint Shovel",
+	"item-shovel-peridotite-*": "Peridotite Primitive Shovel",
+	"item-shovel-granite-*": "Granite Primitive Shovel",
+	"item-shovel-andesite-*": "Andesite Primitive Shovel",
+	"item-shovel-basalt-*": "Basalt Primitive Shovel",
+	"item-shovel-obsidian-*": "Obsidian Primitive Shovel",
+	"item-shovel-flint-*": "Flint Primitive Shovel",
 	"itemdesc-shovel-*-acacia-rope": "with Acacia Shaft and Sisal Binding",
 	"itemdesc-shovel-*-birch-rope": "with Birch Shaft and Sisal Binding",
 	"itemdesc-shovel-*-kapok-rope": "with Kapok Shaft and Sisal Binding",
@@ -1426,12 +1426,12 @@
 	"itemdesc-shovel-*-pine-leatherstrips": "with Pine Shaft and Leather Strip Binding",
 	"itemdesc-shovel-*-bone-leatherstrips": "with Bone Shaft and Leather Strip Binding",
 
-	"item-sickle-peridotite-*": "Primitive Peridotite Sickle",
-	"item-sickle-granite-*": "Primitive Granite Sickle",
-	"item-sickle-andesite-*": "Primitive Andesite Sickle",
-	"item-sickle-basalt-*": "Primitive Basalt Sickle",
-	"item-sickle-obsidian-*": "Primitive Obsidian Sickle",
-	"item-sickle-flint-*": "Primitive Flint Sickle",
+	"item-sickle-peridotite-*": "Peridotite Primitive Sickle",
+	"item-sickle-granite-*": "Granite Primitive Sickle",
+	"item-sickle-andesite-*": "Andesite Primitive Sickle",
+	"item-sickle-basalt-*": "Basalt Primitive Sickle",
+	"item-sickle-obsidian-*": "Obsidian Primitive Sickle",
+	"item-sickle-flint-*": "Flint Primitive Sickle",
 	"itemdesc-sickle-*-acacia-rope": "with Acacia Shaft and Sisal Binding",
 	"itemdesc-sickle-*-birch-rope": "with Birch Shaft and Sisal Binding",
 	"itemdesc-sickle-*-kapok-rope": "with Kapok Shaft and Sisal Binding",
@@ -1456,12 +1456,12 @@
 	"item-handbooktitle-sickle-*": "Used for",
 	"item-handbooktext-sickle-*": "An immersion addition that is used to harvest 3 blocks of grass or crops.",
 
-	"item-slaughteringaxe-peridotite-*": "Primitive Peridotite Slaughtering Axe",
-	"item-slaughteringaxe-granite-*": "Primitive Granite Slaughtering Axe",
-	"item-slaughteringaxe-andesite-*": "Primitive Andesite Slaughtering Axe",
-	"item-slaughteringaxe-basalt-*": "Primitive Basalt Slaughtering Axe",
-	"item-slaughteringaxe-obsidian-*": "Primitive Obsidian Slaughtering Axe",
-	"item-slaughteringaxe-flint-*": "Primitive Flint Slaughtering Axe",
+	"item-slaughteringaxe-peridotite-*": "Peridotite Primitive Slaughtering Axe",
+	"item-slaughteringaxe-granite-*": "Granite Primitive Slaughtering Axe",
+	"item-slaughteringaxe-andesite-*": "Andesite Primitive Slaughtering Axe",
+	"item-slaughteringaxe-basalt-*": "Basalt Primitive Slaughtering Axe",
+	"item-slaughteringaxe-obsidian-*": "Obsidian Primitive Slaughtering Axe",
+	"item-slaughteringaxe-flint-*": "Flint Primitive Slaughtering Axe",
 	"itemdesc-slaughteringaxe-*-acacia-rope": "with Acacia Shaft and Sisal Binding",
 	"itemdesc-slaughteringaxe-*-birch-rope": "with Birch Shaft and Sisal Binding",
 	"itemdesc-slaughteringaxe-*-kapok-rope": "with Kapok Shaft and Sisal Binding",
@@ -1551,12 +1551,12 @@
 	"item-handbooktitle-slaughteringaxe-*": "Used for",
 	"item-handbooktext-slaughteringaxe-*": "An immersion addition that is used to kill domesticated animals.",
 
-	"item-spear-primitive-peridotite-*": "Primitive Peridotite Spear",
-	"item-spear-primitive-granite-*": "Primitive Granite Spear",
-	"item-spear-primitive-andesite-*": "Primitive Andesite Spear",
-	"item-spear-primitive-basalt-*": "Primitive Basalt Spear",
-	"item-spear-primitive-obsidian-*": "Primitive Obsidian Spear",
-	"item-spear-primitive-flint-*": "Primitive Flint Spear",
+	"item-spear-primitive-peridotite-*": "Peridotite Primitive Spear",
+	"item-spear-primitive-granite-*": "Granite Primitive Spear",
+	"item-spear-primitive-andesite-*": "Andesite Primitive Spear",
+	"item-spear-primitive-basalt-*": "Basalt Primitive Spear",
+	"item-spear-primitive-obsidian-*": "Obsidian Primitive Spear",
+	"item-spear-primitive-flint-*": "Flint Primitive Spear",
 	"itemdesc-spear-*-birch-rope": "with Birch Shaft and Sisal Binding",
 	"itemdesc-spear-*-kapok-rope": "with Kapok Shaft and Sisal Binding",
 	"itemdesc-spear-*-maple-rope": "with Maple Shaft and Sisal Binding",
@@ -1578,8 +1578,8 @@
 	"itemdesc-spear-*-pine-leatherstrips": "with Pine Shaft and Leather Strip Binding",
 	"itemdesc-spear-*-bone-leatherstrips": "with Bone Shaft and Leather Strip Binding",
 
-	"item-sword-obsidian-*": "Primitive Obsidian Sword",
-	"item-sword-flint-*": "Primitive Flint Sword",
+	"item-sword-obsidian-*": "Obsidian Primitive Sword",
+	"item-sword-flint-*": "Flint Primitive Sword",
 	"itemdesc-sword-*-birch-rope": "with Birch Shaft and Sisal Binding",
 	"itemdesc-sword-*-kapok-rope": "with Kapok Shaft and Sisal Binding",
 	"itemdesc-sword-*-maple-rope": "with Maple Shaft and Sisal Binding",
@@ -1620,7 +1620,7 @@
 	"block-hammer-head-andesite-*": "Andesite Hammer Head",
 	"block-hammer-head-basalt-*": "Basalt Hammer Head",
 	"block-hammer-head-obsidian-*": "Obsidian Hammer Head",
-	"block-hammer-head-flint-*": "Flint Hammer Head Flint",
+	"block-hammer-head-flint-*": "Flint Hammer Head",
 	"block-hammer-head-peridotite-*": "Peridotite Hammer Head",
 	"blockdesc-hammer-head-*": "Add a bone or debarked very thin branch to create a handle (Sneak + RMB)",
 
@@ -1633,7 +1633,7 @@
 	"blockdesc-hoe-head-*": "Add a bone or debarked very thin branch to create a handle (Sneak + RMB)",
 
 	"block-javelin-head-north": "Bone Javelin Head",
-	"blockdesc-javelin-head-*": "Add bamboo stake to create a handle (Sneak + RMB).",
+	"blockdesc-javelin-head-*": "Add bamboo stake to create a handle (Sneak + RMB)",
 
 	"block-knife-head-granite-*": "Granite Knife Head",
 	"block-knife-head-andesite-*": "Andesite Knife Head",
