language file updates

--- a/bin/Immersion/assets/immersion/lang/en.json
+++ b/bin/Immersion/assets/immersion/lang/en.json
@@ -121,7 +121,7 @@
   "blockdesc-tropicalfruits-coconutslice-*": "Cannot be used in cooking, but can be eaten raw.",
 
   "item-animal-small-bones": "Pile of Small Bones",
-  "itemdesc-animal-small-bones": "Not Yet Implemented. Future use: fertilizers.",
+  "itemdesc-animal-small-bones": "Grind into bonemeal using a quern",
   
   "block-claybricks-red": "Red clay bricks",
   "block-claybricks-brown": "Brown clay bricks",
@@ -1122,12 +1122,10 @@
   "block-dead-rotten-large": "Large Carrion",
   "blockdesc-dead-rotten-*": "Carrion cannot be destroyed and will decay into a skeleton.",
 
-  "block-skeleton-small-eaten": "Small Animal Skeleton (Fresh)",
-  "block-skeleton-large-eaten": "Large Animal Skeleton (Fresh)",
-  "block-skeleton-small-placed": "Small Animal Skeleton",
-  "block-skeleton-large-placed": "Large Animal Skeleton",
-  "blockdesc-skeleton-small": "Break to collect",
-  "blockdesc-skeleton-large": "Use any axe to harvest 4 large bones and 2 piles of small bones",
+  "block-skeleton-small": "Small Animal Skeleton",
+  "block-skeleton-large": "Large Animal Skeleton",
+  "blockdesc-skeleton-small": "Use RMB to pick up, or use any axe to harvest small bones",
+  "blockdesc-skeleton-large": "Use RMB to pick up, or use any axe to harvest 4 large bones",
 
   "block-headless-sheep-ewe": "Headless Ewe",
   "block-headless-sheep-ram": "Headless Ram",
